# pecker-prd-review-agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DEV.md  Dockerfile  HARNESS_MATURITY.md  LICENSE  Makefile  ONBOARDING.md  PRODUCTION_READINESS.md  README.md  SECURITY.md  SHADOW_RUN_FINDINGS_2026_04_16.md  STATUS.md  __init__.py  agent_config.py  api_adapter.py  app.py  cache_monitor.py  calibrate_confidence.py  content_loader.py  context_manager.py  cuckoo_eval.py  cuckoo_parser.py  cuckoo_scorer.py  dashboard.py  deadline_coordinator.py  design-handoff-v7.archived.md  design-handoff-v8.md  docker-compose.prod.yml  docker-compose.yml  easter_eggs.py  event_store.py  exceptions.py  feedback.py  feedback_cmd.py  (+44 more)
.claude/: PHASE_G_PROGRESS.md
api/: __init__.py  budget_gate.py  control_plane_health.py  deps.py  feedback_summary.py  fengniao_evidence.py  figma_context.py  main.py  models.py  review_jobs.py  sanitize.py  stream.py  usage_summary.py  workspace_acl.py
apps/api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  calibrate_confidence.py  content_loader.py  context_manager.py  cuckoo_eval.py  cuckoo_parser.py  cuckoo_scorer.py  docker-compose.yml  event_store.py  exceptions.py  feedback.py  feedback_cmd.py  feishu_bot.py  feishu_client.py  goshawk_advisor.py  io_utils.py  kakapo_dream.py  logger.py  model_routes.example.yaml  models.py  parallel_review.py  post_review.py  prompt_injection_scanner.py  pyproject.toml  register_repo.py  registry.py  report_builder.py  requirements.txt  review-dimensions.yaml  review_fixer.py  review_memory.py  router.py  rule_perf_decay.py  rule_perf_store.py  run_session.py  security.py  (+6 more)
apps/api/api/: __init__.py  feedback_summary.py  main.py  models.py  schema_context.py  stream.py  workspace_acl.py
apps/api/api/routes/: __init__.py  admin_usage.py  audit.py  auth.py  metrics.py  review.py  review_history.py  workspaces.py
apps/api/birds/: __init__.py  shrike.py
apps/api/clients/: codex_cli.py  deepseek_native.py  openai_native.py  shared.py
apps/api/config/: __init__.py  base.py  dev.py  prod.py  test.py
apps/api/review/: __init__.py  aggregation.py  claim_provenance.py  dimensions.py  evidence_verify.py  finding_outcomes_store.py  finding_schema.py  funnel_telemetry.py  gateway_resilience.py  implement_convention.py  langgraph_orchestration.py  metrics_store.py  orchestration.py  prd_context.py  prompting.py  rule_loader.py  scenario_detection.py  schema_registry.py  types.py  wiki_kg_tools.py  wiki_kg_watcher.py  wiki_selection.py
apps/api/tests/: test_public_api_smoke.py
birds/: cuckoo.py  goshawk.py  kakapo.py  pigeon.py
clients/: __init__.py  anthropic_native.py  claude_cli.py  codex_cli.py  deepseek_native.py  factory.py  openai_native.py  shared.py  token_tracker.py
config/: __init__.py  base.py  dev.py  model_channels.example.yaml  prod.py  prompt_quality.example.yaml  test.py
docs/: ACTION_PLAN.md  CI_SELF_HOSTED_RUNNER_SETUP.md  FEISHU_WEBHOOK_SETUP.md  HARNESS_RULES.md  MIGRATION_v1_to_v2.md  RC-009_NEW_RULE_EFFECT.md  README.md  RULE_PERF_CLEANUP.md  SPLIT_PLAN.md  STABILITY_DIAGNOSIS.md  STABILITY_REGRESSION_TESTS.md  audit_drift_pollution_2026_04_26.md  audit_frontend_sync_2026_04_28.md  auto_dev_2026_05_09_6h_continuous.md  auto_dev_2026_05_09_7h30_deep_optimization.md  borrowing_effectiveness_review_2026_04_27.md  calibration_day5_close_2026_04_28.md  calibration_full_chain_2026_04_27.md  calibration_main_head_2026_04_26.md  calibration_multi_run_2026_04_28.md  calibration_points_payment_day5_close_2026_04_28.md  calibration_workspace_coverage_2026_04_27.md  cloudflare-tunnel-setup.md  codex_cc_compat_2026_04_28.md  codex_cc_compat_followup_2026_04_28.md  deployment.md  dev-setup.md  eval_report_metric_diagnosis_2026_04_28.md  feishu_integration.md  fengniao_wiki_frontmatter_dry_run_2026_04_26.md  full_prd_endpoint_2026_04_28.md  internal_network_deployment_request.md  interview-case-study.md  legacy_retirement_plan.md  nli_dar_wiring_diagnosis_2026_04_26.md  optimization_plan_2026_05_11.md  pecker_implement_convention_v1_2026_04_28.md  pm-preview-guide.md  pm-reject-reason-schema.md  public-architecture.md  (+12 more)
eval/: README.md  assistant_eval_system.json  assistant_eval_system.py  consistency_analyzer.py  consistency_eval.py  fact_layer_golden.py  promptopt_global_objective.py
eval_reports/: advisor_goshawk_anthropic_sonnet_20260427_163813.json  advisor_goshawk_anthropic_sonnet_20260427_163813.md  baseline_real_p0_partial.json  baseline_real_p0_partial.md  baseline_real_p1_4routes.json  baseline_real_p1_4routes.md  baseline_real_p2_final.json  baseline_real_p2_final.md  router_intent_anthropic_haiku_20260427_221841.json  router_intent_anthropic_haiku_20260427_221841.md  router_intent_anthropic_haiku_20260427_223505.json  router_intent_anthropic_haiku_20260427_223505.md  router_intent_anthropic_sonnet_20260427_222433.json  router_intent_anthropic_sonnet_20260427_222433.md  router_intent_anthropic_sonnet_20260427_223941.json  router_intent_anthropic_sonnet_20260427_223941.md  verify_nli_anthropic_haiku_20260427_223345.json  verify_nli_anthropic_haiku_20260427_223345.md  verify_nli_anthropic_haiku_20260427_230500.json  verify_nli_anthropic_haiku_20260427_230500.md  worker_compliance_anthropic_sonnet_20260427_233651.json  worker_compliance_anthropic_sonnet_20260427_233651.md
examples/: sample_prd.md
legacy/: OAT_RENEWAL_SOP.md  README.md  app.py
pecker-release/: .env.example  .gitignore  FROZEN.md  agent_config.py  api_adapter.py  context_manager.py  cuckoo_eval.py  easter_eggs.py  feedback.py  goshawk_advisor.py  kakapo_dream.py  parallel_review.py  requirements.txt  run_session.py  security.py  shrike_review.py  tools.py  啄木鸟_产品介绍.md  啄木鸟_使用指南.md  小啄_系统提示词.md
review/: __init__.py  adaptive.py  aggregation.py  claim_provenance.py  code_change_feedback.py  code_change_feedback_store.py  confidence.py  dimensions.py  evidence_verify.py  feedback_store.py  (+22 more)
review-rules-shared/: bmad-checklist.yaml  review-checklist.yaml
(+697 files in other folders)
