[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pecker"
version = "1.0.0"
description = "啄木鸟 PRD 评审 Agent — 基于 Claude 的结构化 PRD 评审工具"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.94.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "json-repair>=0.50.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    # tests/test_stream_disconnect.py 等文件用 @pytest.mark.asyncio + async def,
    # 缺这个 plugin 在 CI (fresh install) 会报 "async def functions are not natively supported".
    # 本地 pip 偶然装过所以本地绿, CI 每次 fresh install 暴露 — 必须写到 dev extras 固定下来.
    "pytest-asyncio>=0.23",
]

[project.scripts]
pecker = "run_session:main"
pecker-feedback = "feedback:main"
pecker-eval = "cuckoo_eval:main"
pecker-dream = "kakapo_dream:main"
pecker-advisor = "goshawk_advisor:main"
pecker-gate = "shrike_review:main"

[tool.setuptools]
# 顶层单文件模块
py-modules = [
    "run_session", "api_adapter", "agent_config", "tools", "security",
    "context_manager", "parallel_review", "feedback", "easter_eggs",
    "goshawk_advisor", "kakapo_dream", "cuckoo_eval", "shrike_review",
    "post_review", "wiki_lock", "models", "logger",
]
# 子 package(pip install . / wheel 发布时必须显式列出,否则 api/review/clients 全丢)
# 踩坑记录 2026-04-24: py-modules 只认顶层 .py,子目录得走 packages 键
# 注意: tools 是顶层 tools.py 单文件,仍在 py-modules 里,不要塞到这里
packages = [
    "api",
    "api.routes",
    "review",
    "clients",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# E5: 显式排除 pecker-release/ 历史快照和 workspace/,防止 collection 误扫
norecursedirs = [
    "pecker-release",
    "workspace*",
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "eval/__pycache__",
]
markers = [
    "eval: Phase 5 F4 - Eval CI gate,评审质量回归门禁(默认跳过,需 -m eval 触发)",
]
