[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pecker"
version = "1.0.0"
description = "啄木鸟 PRD 评审 Agent — 基于 Claude 的结构化 PRD 评审工具"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.94.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "json-repair>=0.50.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    # tests/test_stream_disconnect.py 等文件用 @pytest.mark.asyncio + async def,
    # 缺这个 plugin 在 CI (fresh install) 会报 "async def functions are not natively supported".
    # 本地 pip 偶然装过所以本地绿, CI 每次 fresh install 暴露 — 必须写到 dev extras 固定下来.
    "pytest-asyncio>=0.23",
]

[project.scripts]
pecker = "run_session:main"
pecker-feedback = "feedback:main"
pecker-eval = "cuckoo_eval:main"
pecker-dream = "kakapo_dream:main"
pecker-advisor = "goshawk_advisor:main"
pecker-gate = "shrike_review:main"
pecker-prd-tdd-pipeline = "scripts.prd_tdd_pipeline:main"

[tool.setuptools]
# 顶层单文件模块 — 全加是防回归策略: 任何顶层 .py 都可能被子包 import,
# 漏一个就炸 (2026-04-24 二次外部 review 抓到 io_utils/config/stability_metrics
# 漏装,原因就是只列了主入口; 从此改全列 + 由 tests/test_package_discovery.py
# 做真装真 import 兜底)
py-modules = [
    "agent_config",
    "api_adapter",
    "cache_monitor",
    "calibrate_confidence",
    "content_loader",
    "context_manager",
    "cuckoo_eval",
    "cuckoo_parser",
    "cuckoo_scorer",
    "dashboard",
    "deadline_coordinator",
    "easter_eggs",
    "event_store",
    "exceptions",
    "feedback",
    "feedback_cmd",
    "feishu_bot",
    "feishu_client",
    "goshawk_advisor",
    "interactive_io",
    "io_utils",
    "kakapo_dream",
    "logger",
    "merge_reviews",
    "migrate_memory_to_wiki",
    "models",
    "parallel_review",
    "post_review",
    "prd_diff",
    "promote_c_to_wiki",
    "prompt_injection_scanner",
    "register_repo",
    "registry",
    "report_builder",
    "review_fixer",
    "review_memory",
    "router",
    "rule_perf_decay",
    "rule_perf_store",
    "run_parallel_test",
    "run_session",
    "security",
    "session_setup",
    "shrike_review",
    "tool_runtime",
    "tools",
    "wiki_consolidation",
    "wiki_lock",
    "wiki_log",
]
# 子 package (pip install . / wheel 发布时必须显式列出,否则 api/review/clients
# /config/scripts 全丢) — 2026-04-24 二次外部 review: agent_config 导入 config,
# api.routes.metrics 导入 scripts.stability_metrics, 缺任何一个 fresh install
# 都会 ModuleNotFoundError
packages = [
    "api",
    "api.routes",
    "review",
    "clients",
    "config",
    "scripts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
# E5: 显式排除 pecker-release/ 历史快照和 workspace/,防止 collection 误扫
# Windows local sandboxes can leave .pytest_cache unreadable.
addopts = ["-p", "no:cacheprovider"]
norecursedirs = [
    "pecker-release",
    "workspace*",
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "eval/__pycache__",
]
markers = [
    "eval: Phase 5 F4 - Eval CI gate,评审质量回归门禁(默认跳过,需 -m eval 触发)",
]
