[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pecker-api-public"
version = "0.1.0"
description = "Public-safe FastAPI backend snapshot for Pecker PRD review."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.94.0",
    "fastapi>=0.115.0",
    "json-repair>=0.50.0",
    "langgraph>=1.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pyyaml>=6.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-p", "no:cacheprovider"]
norecursedirs = [
    ".git",
    ".venv",
    "__pycache__",
    ".pytest_cache",
    "workspace*",
    "shared-wiki",
    "wiki",
    "eval",
]
